# CDNProtocol

./: CDNProtocol_global.h  CMakeLists.txt  README.md  buid — ярлык.lnk  cdnprotocol.cpp  cdnprotocol.h
include/CDNProtocol/: CommandEnums.h  CommandRegistry.h  Export.h  ProtocolMessage.h  ProtocolUtils.h  Roles.h
src/: CommandRegistry.cpp  ProtocolMessage.cpp  ProtocolUtils.cpp
tests/: CMakeLists.txt  test_CommandRegistry.cpp  test_ProtocolMessage.cpp  test_utils.h
